--- a/finetune/configs/train_whisper_tiny_BOHB_jan.config
+++ b/finetune/configs/train_whisper_tiny_BOHB_jan.config
@@ -8,10 +8,10 @@ fp16 = True
 num_samples = 40
 
 # model specific impact
-return_timestamps = True
+return_timestamps = False
 
 # Trainer/Scheduler Specific Settings
-search_schedule_mode = large_small_BOHB #currently available: large_small_BOHB and large_small_OPTUNA
+search_schedule_mode = large_small_OPTUNA #currently available: large_small_BOHB and large_small_OPTUNA
 reduction_factor = 4
 metric_to_optimize = eval_wer #currently available: eval_wer and eval_loss
 
@@ -58,3 +58,6 @@ model_type = openai/whisper-tiny
 debug = False
 path_to_data = ../data/bug
 run_on_local_machine = False
+h5 = True
+peft = False
+
