changing script to allow for PEFT

--- a/finetune/configs/tiny_debug.config
+++ b/finetune/configs/tiny_debug.config
@@ -3,7 +3,7 @@
 #####################
 # Training time impacting
 num_train_epochs = 8
-per_device_train_batch_size = 2
+per_device_train_batch_size = 16
 fp16 = True
 num_samples = 2
 
@@ -29,7 +29,7 @@ output_tag = whisper_tiny_debug_OPTUNA
 
 # Logging Specific Settings
 save_steps = 4
-eval_steps = 1
+eval_steps = 2
 logging_steps = 1
 
 # Cluster Specific Settings: These Must Match The Requested Resources In The .BS File
@@ -37,6 +37,7 @@ num_workers = 1
 cpus_per_trial = 7
 gpus_per_trial = 0
 use_gpu = False
+dataloader_num_workers = 2
 
 # For Reproducibility: Import To Use The Same Random Seed For Evaluation
 random_seed = 1337
@@ -55,7 +56,7 @@ resume_training = False
 # Model type and debugging
 #####################
 model_type = openai/whisper-small
-peft = False
+peft = True
 debug = True
 path_to_data = /Users/chrvt/Documents/GitHub/asr-finetune/data_example/datasets
 dataset_name = eg_dataset_complete_5sec.h5
