--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,12 @@ torch==2.5.1
 torchvision==0.20.1
 torchaudio==2.5.1
 evaluate==0.4.3
-safetensors==0.10.3.post1
+safetensors==0.5.3
 transformers==4.46.3
 configargparse==1.7
 sympy==1.13.1
 datasets==3.1.0
-soundfile==0.10.3.post1
+soundfile==0.13.1
 librosa==0.9.2
 hpbandster==0.7.4
 ConfigSpace==1.2.0
