--- a/finetune/configs/train_whisper_large3_feb.config
+++ b/finetune/configs/train_whisper_large3_feb.config
@@ -3,9 +3,9 @@
 #####################
 # Training time impacting
 num_train_epochs = 8
-per_device_train_batch_size = 16
+per_device_train_batch_size = 8
 fp16 = True
-num_samples = 40
+num_samples = 100
 
 # model specific impact
 return_timestamps = False
@@ -13,7 +13,7 @@ return_timestamps = False
 # Trainer/Scheduler Specific Settings
 search_schedule_mode = large_small_OPTUNA #currently available: large_small_BOHB and large_small_OPTUNA
 reduction_factor = 4
-metric_to_optimize = eval_wer #currently available: eval_wer and eval_loss
+metric_to_optimize = eval_loss #currently available: eval_wer and eval_loss
 
 # List of hyperparameters to finetune
 hyperparameters=learning_rate,weight_decay #currently available: learning_rate,weight_decay and warmup_steps
@@ -25,25 +25,25 @@ max_warmup_steps = 0
 #####################
 
 # Output Directory Name
-output_tag = whisper_tiny_BOHB_jan
+output_tag = v3_large_feb
 
 # Logging Specific Settings
 save_steps = 30
 eval_steps = 15
-logging_steps = 15
+logging_steps = 5
 
 # Cluster Specific Settings: These Must Match The Requested Resources In The .BS File
 num_workers = 1
-cpus_per_trial = 6
-gpus_per_trial = 1
+cpus_per_trial = 4
+gpus_per_trial = 0.5
 use_gpu = True
+prefetch_batches = 4
 
 # For Reproducibility: Import To Use The Same Random Seed For Evaluation
 random_seed = 1337
-test_split = 0.2
 
 # Scalability and storage
-max_concurrent_trials = 20
+max_concurrent_trials = 32
 reuse_actors = True
 num_to_keep = 1
 
@@ -54,10 +54,9 @@ resume_training = False
 #####################
 # Model type and debugging
 #####################
-model_type = openai/whisper-small
+model_type = openai/whisper-large-v3
 debug = False
-path_to_data = ../data/bug
+dataset_name = eg_dataset_complete_v2
 run_on_local_machine = False
-h5 = True
 peft = False
 
