--- a/finetune/configs/train_whisper_large3_peter.config
+++ b/finetune/configs/train_whisper_large3_peter.config
@@ -5,7 +5,7 @@
 num_train_epochs = 8
 per_device_train_batch_size = 16
 fp16 = True
-num_samples = 2
+num_samples = 128
 
 # model specific impact
 return_timestamps = False
@@ -16,8 +16,8 @@ reduction_factor = 4
 metric_to_optimize = eval_loss #currently available: eval_wer and eval_loss
 
 # List of hyperparameters to finetune
-hyperparameters=learning_rate,weight_decay #currently available: learning_rate,weight_decay and warmup_steps
-max_warmup_steps = 0
+hyperparameters=learning_rate,weight_decay,warmup_steps #currently available: learning_rate,weight_decay and warmup_steps
+max_warmup_steps = 29   # must be < save_steps
 
 
 #####################
@@ -25,26 +25,25 @@ max_warmup_steps = 0
 #####################
 
 # Output Directory Name
-output_tag = whisper_large_jan
+output_tag = v3_large_peter
 
 # Logging Specific Settings
 save_steps = 30
 eval_steps = 15
-logging_steps = 15
+logging_steps = 5
 
 # Cluster Specific Settings: These Must Match The Requested Resources In The .BS File
 num_workers = 1
-cpus_per_trial = 2
+cpus_per_trial = 4
 gpus_per_trial = 1
 use_gpu = True
-dataloader_num_workers = 1
+prefetch_batches = 4
 
 # For Reproducibility: Import To Use The Same Random Seed For Evaluation
 random_seed = 1337
-test_split = 0.2
 
 # Scalability and storage
-max_concurrent_trials = 20
+max_concurrent_trials = 32
 reuse_actors = True
 num_to_keep = 1
 
@@ -56,10 +55,7 @@ resume_training = False
 # Model type and debugging
 #####################
 model_type = openai/whisper-large-v3
-debug = True
-path_to_data = /scratch/usr/bexkompi/data/
-dataset_name = eg_dataset_subset_1000.h5
+debug = False
+dataset_name = eg_dataset_complete_v2
 run_on_local_machine = False
-h5 = True
 peft = False
-
