--- a/finetune/configs/train_whisper_largev3_debug.config
+++ b/finetune/configs/train_whisper_largev3_debug.config
@@ -3,21 +3,22 @@
 #####################
 # Training time impacting
 num_train_epochs = 8
-per_device_train_batch_size = 2
+per_device_train_batch_size = 8
 fp16 = True
-num_samples = 2
+num_samples = 10
 
 # model specific impact
 return_timestamps = False
 
 # Trainer/Scheduler Specific Settings
-search_schedule_mode = large_small_OPTUNA
+search_schedule_mode = large_small_OPTUNA #currently available: large_small_BOHB and large_small_OPTUNA
 reduction_factor = 4
-metric_to_optimize = eval_loss
+metric_to_optimize = eval_loss #currently available: eval_wer and eval_loss
 
-# List and settings of hyperparameters to finetune
-hyperparameters=learning_rate,weight_decay
-max_warmup_steps = 0
+# List of hyperparameters to finetune
+#currently available: learning_rate,weight_decay,scheduler,label_smoothing_factor and warmup_steps
+hyperparameters=learning_rate,weight_decay,label_smoothing_factor,scheduler
+max_warmup_steps = 29
 
 
 #####################
@@ -25,24 +26,25 @@ max_warmup_steps = 0
 #####################
 
 # Output Directory Name
-output_tag = whisper_tiny_debug_OPTUNA
+output_tag = whisper_large_jan
 
 # Logging Specific Settings
-save_steps = 4
-eval_steps = 1
-logging_steps = 1
+save_steps = 30
+eval_steps = 15
+logging_steps = 5
 
 # Cluster Specific Settings: These Must Match The Requested Resources In The .BS File
 num_workers = 1
-cpus_per_trial = 7
-gpus_per_trial = 0
-use_gpu = False
+cpus_per_trial = 3
+gpus_per_trial = 0.5
+use_gpu = True
+prefetch_batches = 4
 
 # For Reproducibility: Import To Use The Same Random Seed For Evaluation
 random_seed = 1337
 
 # Scalability and storage
-max_concurrent_trials = 1
+max_concurrent_trials = 20
 reuse_actors = True
 num_to_keep = 1
 
@@ -53,11 +55,9 @@ resume_training = False
 #####################
 # Model type and debugging
 #####################
-model_type = openai/whisper-small
-peft = False
+model_type = openai/whisper-large-v3
 debug = True
-path_to_data = /Users/chrvt/Documents/GitHub/asr-finetune/data_example/datasets
 dataset_name = eg_dataset_subset_1000
-#../data_example/datasets
-run_on_local_machine = True
-single_file = False
+run_on_local_machine = False
+peft = False
+
