--- a/finetune/configs/tiny_debug.config
+++ b/finetune/configs/tiny_debug.config
@@ -57,7 +57,7 @@ model_type = openai/whisper-small
 peft = False
 debug = True
 path_to_data = /Users/chrvt/Documents/GitHub/asr-finetune/data_example/datasets
-dataset_name = eg_dataset_subset_1000
+dataset_name = eg_dataset_complete_v2
 #../data_example/datasets
 run_on_local_machine = True
 single_file = False
