Minimal Version update - Zuse server version

--- a/finetune/minimal_version/configs/largev3_jun.config
+++ b/finetune/minimal_version/configs/largev3_jun.config
@@ -3,10 +3,9 @@
 #####################
 # Training time impacting
 num_train_epochs = 1
-per_device_train_batch_size = 8
 per_device_eval_batch_size = 8
 fp16 = True
-num_samples = 10
+num_samples = 24
 
 # model specific impact
 return_timestamps = False
@@ -17,21 +16,19 @@ reduction_factor = 4
 metric_to_optimize = eval_loss_wer #eval_wer #,eval_loss
 wer_weight = 0.7
 modes = min #which modes corresponding to the metric to optimise
-eval_sample_fraction = 0.001  # splitting eval set into smaller sizes for faster training
-max_steps = 1000 # max number of steps
+eval_sample_fraction = 0.05 # splitting eval set into smaller sizes for faster training, corresponds to 1K eval set out of 20K
+max_steps = 20131 # max number of steps, here: len(train_set)/max_batch_size
 
 
 # Logging Specific Settings
-save_steps = 20
-eval_steps = 10
-logging_steps = 5
+save_steps = 2000
+eval_steps = 1000 # so that statistically all eval set gets sampled
+logging_steps = 500
 
 
 # List of hyperparameters to finetune
 hyperparameters=learning_rate,batch_size,weight_decay,warmup_ratio #currently available: learning_rate,weight_decay, scheduler, warmup_steps, rank, alpha (peft only)
-warmup_steps = 5
-max_warmup_steps = 4
-warmup_ratio = 0
+
 
 
 #####################
@@ -39,7 +36,7 @@ warmup_ratio = 0
 #####################
 
 # Output Directory Name
-output_tag = v3_large_debug
+output_tag = v3_large_jun
 
 
 # Cluster Specific Settings: These Must Match The Requested Resources In The .BS File
@@ -66,7 +63,6 @@ resume_training = False
 #####################
 model_type = openai/whisper-large-v3
 debug = False # uses less data then provided
-##path_to_data =/scratch/usr/bemchrvt/data/
 dataset_name = eg_dataset_complete_v3_sharded
 run_on_local_machine = False
 peft = False
