some small bugs regarding fetching data

--- a/finetune/minimal_version/configs/largev3_peft_local_debug.config
+++ b/finetune/minimal_version/configs/largev3_peft_local_debug.config
@@ -41,8 +41,8 @@ output_tag = v3_large_debug
 # Cluster Specific Settings: These Must Match The Requested Resources In The .BS File
 num_workers = 1
 cpus_per_trial = 2
-gpus_per_trial = 0.5
-use_gpu = True
+gpus_per_trial = 0
+use_gpu = False
 prefetch_batches = 1
 
 # For Reproducibility: Import To Use The Same Random Seed For Evaluation
@@ -61,7 +61,7 @@ resume_training = False
 #####################
 model_type = openai/whisper-large-v3
 debug = True # uses less data then provided
-path_to_data =/scratch/usr/bemchrvt/data/
+path_to_data = /Users/chrvt/Documents/GitHub/asr-finetune/data_example/datasets/eg_dataset_complete_v3_sharded
 dataset_name = eg_dataset_complete_v3_sharded
 run_on_local_machine = True
 peft = True
