--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ benchmark_dataloader.py
 
 /finetune/minimal_version/output
 /finetune/minimal_version/output
+/finetune/training/output
+/sessions/
